# libconfuse

./: CMakeLists.txt  README
cmake/: Findconfuse.cmake
examples/: CMakeLists.txt  ftp.conf  ftpconf.c  reread.c  simple.c
po/: de.po  fr.po  sv.po
src/: CMakeLists.txt  confuse.c  lexer.l  options.c  opts_array.c  portable.c
src/include/confuse/: config.h  confuse.h  general.h  options.h  opts_array.h  types.h  version.h.cmake
tests/: CMakeLists.txt  check_confuse.h  opts_array.c
